Fixed spacing problems. Added calc function for col-center in main.

--- a/css/style.css
+++ b/css/style.css
@@ -16,32 +16,32 @@
 }
 
 nav {
-    background-color: pink;
+    background-color: #E579E6;
     height: 100px;
-    margin: 20px 0;
+    margin: 10px 0 10px 0;
 }
 
 .banner {
-    background-color: rgb(223,214,134);
+    background-color: #E1D67A;
     height: 400px;
-    margin: 20px 0;
+    margin: 0 0 10px 0;
 }
 
 main {
-    background-color: blue;
-    margin-bottom: 10px;
+    background-color: #0086FF;
+    margin: 0 0 5px 0;
 }
 
 .main-title {
-    background-color: lightblue;
+    background-color: #ABCFE6;
     height: 100px;
+    margin: 0 0 10px 0;
 }
 
 .col {
     float: left;
-    background-color: lightblue;
+    background-color: #ABCFE6;
     height: 400px;
-    padding: 20px;
 }
 
 .col-edge {
@@ -49,7 +49,8 @@ main {
 }
 
 .col-center {
-    width: 60%;
+    width: calc(60% - 20px);
+    margin: 0 10px 10px 10px;
 }
 
 .clearfix:after {
@@ -59,8 +60,9 @@ main {
 }
 
 .page-footer {
-    height: 50px;
-    background-color: blueviolet;
+    height: 100px;
+    background-color: #8802FE;
+    margin: 0 0 10px 0;
 }
 
 /* COMMON END */
